[tool.poetry]
name = "clustering"
version = "0.1.0"
description = ""
authors = ["hundredeuk2 <“leehd1995@gmail.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
openai = "0.28"
transformers = "^4.36.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
pinecone-client = "^2.2.4"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
chromadb = "^0.4.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
